--- a/src/app.scss
+++ b/src/app.scss
@@ -7,7 +7,7 @@
 body {
   height: 100%;
   overflow-x: none;
-  #points {
+  .points {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
