--- a/src/app.scss
+++ b/src/app.scss
@@ -8,6 +8,7 @@ body {
   height: 100%;
   overflow-x: none;
   .points {
+    margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -18,6 +19,9 @@ body {
       align-items: center;
       justify-content: center;
       border: 1px solid black;
+      p {
+        pointer-events: none;
+      }
     }
   }
 }
